<resources>
    <string name="app_name">PROG3210_A2</string>

    <string name="search_title">Movie search</string>
    <string name="search_field">Search term</string>
    <string name="search_button">Search</string>
    <string name="search_status">Search status</string>
    <string name="search_loading">Searching…</string>
    <string name="search_error">Search error.</string>
    <string name="search_failure">Search failure:</string>
    <string name="search_results">%d results found.</string>

    <string name="movie_name">Movie name</string>
    <string name="movie_year">2000</string>
    <string name="movie_name_year">Movie name (2000)</string>
    <string name="movie_studio">Movie studio</string>
    <string name="movie_rating">G</string>
    <string name="movie_length">1h 30m</string>
    <string name="movie_description">This is a movie description.</string>

    <string name="movie_prefix_date">Release date:</string>
    <string name="movie_prefix_genre">Genre:</string>
    <string name="movie_prefix_director">Director:</string>
    <string name="movie_prefix_writer">Writer:</string>
    <string name="movie_prefix_actors">Actors:</string>
    <string name="movie_prefix_language">Language:</string>
    <string name="movie_prefix_country">Country:</string>
    <string name="movie_prefix_awards">Awards:</string>
    <string name="movie_prefix_ratings">Ratings:</string>
    <string name="movie_prefix_dvd">DVD:</string>
    <string name="movie_prefix_box_office">Box office:</string>
    <string name="movie_prefix_production">Production:</string>
    <string name="movie_prefix_website">Website:</string>

    <string name="details_title">Movie details</string>
    <string name="details_back">Back to search</string>

    <string name="poster_description">Poster image</string>
</resources>