<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_name"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/studioText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_studio" />

        <Space
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>

        <TextView
            android:id="@+id/ratingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_rating" />
    </LinearLayout>
</LinearLayout>